tests/samples/error.err
error.flow:6:Syntax error. "ot empty'\n*done\n".
